[gd_scene load_steps=14 format=2]

[ext_resource path="res://resources/body.png" type="Texture" id=1]
[ext_resource path="res://resources/smallgear.png" type="Texture" id=2]
[ext_resource path="res://resources/largegear.png" type="Texture" id=3]
[ext_resource path="res://resources/counterweight.png" type="Texture" id=4]
[ext_resource path="res://resources/pitman.png" type="Texture" id=5]
[ext_resource path="res://resources/beam.png" type="Texture" id=6]
[ext_resource path="res://Main.gd" type="Script" id=7]
[ext_resource path="res://Roboto-Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://resources/knob.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0509804, 0.368627, 0.929412, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0509804, 0.368627, 0.929412, 1 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 8 )

[node name="Main" type="Node2D"]
script = ExtResource( 7 )

[node name="background" type="ColorRect" parent="."]
margin_left = 1.0
margin_top = 2.0
margin_right = 1025.0
margin_bottom = 601.0
color = Color( 0.0666667, 0.509804, 0.490196, 1 )

[node name="base" type="Sprite" parent="."]
position = Vector2( 398.125, 368.897 )
scale = Vector2( 0.799724, 0.728615 )
texture = ExtResource( 1 )

[node name="smallgear" type="Sprite" parent="."]
position = Vector2( 220.125, 450.897 )
texture = ExtResource( 2 )

[node name="largegear" type="Sprite" parent="."]
position = Vector2( 312.125, 400.897 )
scale = Vector2( 0.921, 0.921 )
texture = ExtResource( 3 )

[node name="counterweight" type="Sprite" parent="."]
position = Vector2( 348.125, 401.897 )
scale = Vector2( 0.721, 0.721 )
texture = ExtResource( 4 )
offset = Vector2( 71, 0 )

[node name="beam" type="Sprite" parent="."]
position = Vector2( 508.125, 199.897 )
scale = Vector2( 0.950628, 0.906863 )
texture = ExtResource( 6 )
offset = Vector2( 37, 15 )

[node name="pitman" type="Sprite" parent="."]
position = Vector2( 401.091, 402.392 )
scale = Vector2( 0.928571, 0.713792 )
texture = ExtResource( 5 )
offset = Vector2( -15, -145 )

[node name="motor_rpm_slider" type="VSlider" parent="."]
margin_left = 79.0
margin_top = 153.0
margin_right = 95.0
margin_bottom = 448.0
custom_styles/grabber_area_highlight = SubResource( 1 )
custom_styles/grabber_area = SubResource( 2 )
max_value = 5000.0
value = 300.0

[node name="crankpin_radius_slider" type="VSlider" parent="."]
margin_left = 164.0
margin_top = 154.0
margin_right = 180.0
margin_bottom = 449.0
custom_styles/grabber_area_highlight = SubResource( 1 )
custom_styles/grabber_area = SubResource( 3 )
min_value = 20.0
max_value = 75.0
value = 53.0

[node name="display_motor_rotation" type="Label" parent="."]
margin_left = 47.0
margin_top = 40.0
margin_right = 201.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 4 )
text = "Motor: 0 RPM"
valign = 1

[node name="display_SPM" type="Label" parent="."]
margin_left = 50.0
margin_top = 78.0
margin_right = 218.0
margin_bottom = 116.0
custom_fonts/font = SubResource( 4 )
text = "Pump Radius: 0 SPM"
valign = 1

[node name="knob" type="Position2D" parent="."]
position = Vector2( 371, 195 )

[node name="Knob" type="Sprite" parent="knob"]
scale = Vector2( 0.33871, 0.33871 )
texture = ExtResource( 9 )

[connection signal="value_changed" from="motor_rpm_slider" to="." method="_on_motor_rpm_slider_value_changed"]
[connection signal="value_changed" from="crankpin_radius_slider" to="." method="_on_crankpin_radius_slider_value_changed"]
